--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
-    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.1",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "bootstrap": "^4.5.0",
     "highcharts": "^8.0.4",
     "highcharts-angular": "^2.4.0",
     "rxjs": "~6.5.5",
